--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -1,1 +1,167 @@
-%section.articles= article_summaries(latest_articles)
+Template: home
+
+:plain
+	<!-- main -->
+			<div id="main">
+
+				<h3>Recent Articles</h3>
+
+				<div class="block odd">
+
+					<a title="" href="index.html"><img src="images/thumb-1.jpg" class="thumbnail" alt="img" width="240px" height="100px"/></a>
+
+					<div class="blk-top">
+
+						<h4><a href="index.html">Aliquam Risus Justo Lorem Ipsum Dolor Sit Amet</a></h4>	
+						<p><span class="datetime">August 27, 2009</span><a href="index.html" class="comment">2 Comments</a></p>
+
+					</div>						
+
+					<div class="blk-content">
+
+						<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. 
+						Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu 
+						posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum 
+						odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra 
+						condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. 				
+						</p>					
+
+						<p><a class="more" href="index.html">continue reading &raquo;</a></p>
+
+					</div>
+
+				</div>
+
+				<div class="block even">
+
+					<a title="" href="index.html"><img src="images/thumb-2.jpg" class="thumbnail" alt="img" width="240px" height="100px"/></a>
+
+					<div class="blk-top">
+
+						<h4><a href="index.html">Aliquam Risus Justo</a></h4>	
+						<p><span class="datetime">August 26, 2009</span> <a href="index.html" class="comment">2 Comments</a></p>
+
+					</div>						
+
+					<div class="blk-content">
+
+						<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. 
+						Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu 
+						posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum 
+						odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra 
+						condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. 	
+
+						<a class="more" href="index.html">continue reading &raquo;</a>			
+						</p>
+
+						<p></p>
+
+					</div>
+
+				</div>
+
+				<div class="fix"></div>
+
+				<div class="block odd">
+
+					<a title="" href="index.html"><img src="images/thumb-3.jpg" class="thumbnail" alt="img" width="240px" height="100px"/></a>
+
+					<div class="blk-top">
+
+						<h4><a href="index.html">Justo Lorem Ipsum Dolor Sit Amet</a></h4>	
+						<p><span class="datetime">August 26, 2009</span> <a href="index.html" class="comment">2 Comments</a></p>
+
+					</div>						
+
+					<div class="blk-content">
+
+						<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. 
+						Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu 
+						posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum 
+						odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra 
+						condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. 				
+						</p>
+
+						<p><a class="more" href="index.html">continue reading &raquo;</a></p>
+
+					</div>
+
+				</div>
+
+				<div class="block even">
+
+					<a title="" href="index.html"><img src="images/thumb-4.jpg" class="thumbnail" alt="img" width="240px" height="100px"/></a>
+
+					<div class="blk-top">
+
+						<h4><a href="index.html">Aliquam Risus Justo</a></h4>	
+						<p><span class="datetime">August 25, 2009</span> <a href="index.html" class="comment">2 Comments</a></p>
+
+					</div>						
+
+					<div class="blk-content">
+
+						<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. 
+						Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu 
+						posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum 
+						odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra 
+						condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. 				
+						</p>
+
+						<p><a class="more" href="index.html">continue reading &raquo;</a></p>
+
+					</div>
+
+				</div>
+
+				<div class="fix"></div>			
+
+			<!-- /main -->	
+			</div>
+
+			<!-- sidebar -->
+			<div id="sidebar">
+
+				<div class="sidemenu">
+					<h3>Sidebar Menu</h3>
+					<ul>				
+						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html#TemplateInfo">TemplateInfo</a></li>
+						<li><a href="style.html">Style Demo</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="archives.html">Archives</a></li>
+						<li><a href="http://www.dreamtemplate.com/" title="Web Templates">Web Templates</a></li>
+					</ul>	
+				</div>
+
+				<div class="sidemenu">
+					<h3>Sponsors</h3>
+					<ul>
+						<li><a href="http://www.dreamtemplate.com" title="Website Templates">DreamTemplate</a><span>Over 6,000+ Premium Web Templates</span></li>
+						<li><a href="http://www.themelayouts.com" title="WordPress Themes">ThemeLayouts</a><span>Premium WordPress &amp; Joomla Themes</span></li>
+						<li><a href="http://www.imhosted.com" title="Website Hosting">ImHosted.com</a><span>Affordable Web Hosting Provider</span></li>
+						<li><a href="http://www.dreamstock.com" title="Stock Photos">DreamStock</a><span>Download Amazing Stock Photos</span></li>
+						<li><a href="http://www.evrsoft.com" title="Website Builder">Evrsoft</a><span>Website Builder Software &amp; Tools</span></li>
+						<li><a href="http://www.webhostingwp.com" title="Web Hosting">Web Hosting</a><span>Top 10 Hosting Reviews</span></li>
+					</ul>
+				</div>
+
+				<h3>Image Gallery </h3>					
+
+				<p class="thumbs">
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>	
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>
+					<a href="index.html"><img src="images/thumb.jpg" width="40" height="40" alt="thumbnail" /></a>				
+				</p>					
+
+			<!-- /sidebar -->				
+			</div>
