--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,8 +1,115 @@
-%footer.branding
-  %p
-    Powered by Nesta, a
-    = succeed "." do
-      %a(href="http://effectif.com/nesta") Ruby CMS
-    Design by
-    = succeed "." do
-      %a(href="http://effectif.com") Graham Ashton
+:plain
+	<!-- footer -->	
+	<div id="footer">	
+
+		<!-- footer-outer -->	
+		<div id="footer-outer" class="clear"><div id="footer-wrap">
+
+			<div class="col-a">
+
+				<h3>Contact Info</h3>
+
+				<p>
+				<strong>Phone: </strong>+1234567<br/>
+				<strong>Fax: </strong>+123456789
+				</p>
+
+				<p><strong>Address: </strong>123 Put Your Address Here</p>
+
+				<p><strong>E-mail: </strong>me@jungleland.com</p>
+				<p>Want more info - go to our <a href="#">contact page</a></p>			
+
+				<h3>Follow Us</h3>
+
+				<div class="footer-list">
+					<ul>				
+						<li><a href="index.html" class="rssfeed">RSS Feed</a></li>
+						<li><a href="index.html" class="email">Email</a></li>
+						<li><a href="index.html" class="twitter">Twitter</a></li>									
+					</ul>
+				</div>					
+
+			</div>
+
+			<div class="col-a">			
+
+				<h3>Site Links</h3>
+
+				<div class="footer-list">
+					<ul>				
+						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Style Demo</a></li>
+						<li><a href="index.html">Blog</a></li>
+						<li><a href="index.html">Archive</a></li>
+						<li><a href="index.html">About</a></li>		
+						<li><a href="index.html">Template Info</a></li>		
+						<li><a href="index.html">Site Map</a></li>					
+					</ul>
+				</div>					
+
+			</div>
+
+			<div class="col-a">
+
+				<h3>Web Resource</h3>
+
+				<p>Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu 
+				posuere nunc justo tempus leo. </p>
+
+				<div class="footer-list">
+					<ul>
+	                    <li><a href="http://www.dreamtemplate.com" title="Website Templates">DreamTemplate</a></li>
+						<li><a href="http://www.themelayouts.com" title="WordPress Themes">ThemeLayouts</a></li>
+						<li><a href="http://www.imhosted.com" title="Website Hosting">ImHosted.com</a></li>
+						<li><a href="http://www.dreamstock.com" title="Stock Photos">DreamStock</a></li>
+						<li><a href="http://www.evrsoft.com" title="Website Builder">Evrsoft</a></li>
+						<li><a href="http://www.webhostingwp.com" title="Web Hosting">Web Hosting</a></li>
+					</ul>
+				</div>			
+
+			</div>		
+
+			<div class="col-b">
+
+				<h3>About</h3>			
+
+				<p>
+				<a href="index.html"><img src="images/gravatar.jpg" width="40" height="40" alt="firefox" class="float-left" /></a>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. 
+				Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu 
+				posuere nunc justo tempus leo. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. 
+				Cras id urna. <a href="index.html">Learn more...</a>
+				</p>			
+
+			</div>		
+
+			<div class="fix"></div>
+
+			<!-- footer-bottom -->
+			<div id="footer-bottom">
+
+				<div class="bottom-left">
+					<p>
+					&copy; 2010 <strong>Copyright Info Here</strong>&nbsp; &nbsp; &nbsp;
+					<a href="http://www.bluewebtemplates.com/" title="Website Templates">website templates</a> by <a href="http://www.styleshout.com/">styleshout</a>
+					</p>
+				</div>		
+
+				<div class="bottom-right">
+					<p>		
+						<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | 
+			   		    <a href="http://validator.w3.org/check/referer">XHTML</a>	|
+						<a href="index.html">Home</a> |
+						<strong><a href="#top" class="back-to-top">Back to Top</a></strong>								
+					</p>
+				</div>
+
+			<!-- /footer-bottom -->		
+			</div>
+
+		<!-- /footer-outer -->		
+		</div></div>		
+
+	<!-- /footer -->
+	</div>
+	
