Heavily modified layouts, stripped HTML5 junk.
Added licensing pages

Added banner content

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -16,7 +16,7 @@
 
 				<p><strong>Address: </strong>123 Put Your Address Here</p>
 
-				<p><strong>E-mail: </strong>me@jungleland.com</p>
+				<p><strong>E-mail: </strong>imageresizer.net@gmail.com</p>
 				<p>Want more info - go to our <a href="#">contact page</a></p>			
 
 				<h3>Follow Us</h3>
@@ -90,8 +90,8 @@
 
 				<div class="bottom-left">
 					<p>
-					&copy; 2010 <strong>Copyright Info Here</strong>&nbsp; &nbsp; &nbsp;
-					<a href="http://www.bluewebtemplates.com/" title="Website Templates">website templates</a> by <a href="http://www.styleshout.com/">styleshout</a>
+					&copy; 2011 <strong>Nathanael Jones</strong>&nbsp; &nbsp; &nbsp;
+					
 					</p>
 				</div>		
 
@@ -99,7 +99,7 @@
 					<p>		
 						<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | 
 			   		    <a href="http://validator.w3.org/check/referer">XHTML</a>	|
-						<a href="index.html">Home</a> |
+						<a href="/">Home</a> |
 						<strong><a href="#top" class="back-to-top">Back to Top</a></strong>								
 					</p>
 				</div>
