--- a/views/header.haml
+++ b/views/header.haml
@@ -1,24 +1,23 @@
 :plain
 	<!-- header -->
-	<div id="header">			
+	<div class="header">			
 	
 		<a name="top"></a>
 		
-		<h1 id="logo-text"><a href="index.html" title="">#{@heading}</a></h1>		
+		<h1 id="logo-text"><a href="index.html" title="">Image resizing for IIS/ASP.NET</a></h1>		
 		<p id="slogan">#{@subtitle}</p>					
 		
 		<div  id="nav">
 			<ul>
-				<li id="current"><a href="index.html">Home</a></li>
-				<li><a href="style.html">Style Demo</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="archives.html">Archives</a></li>
-				<li><a href="index.html">Support</a></li>
-				<li><a href="index.html">About</a></li>		
+				<li id="current"><a href="/">Home</a></li>
+				<li><a href="/download"><span class="downloadicon">Download</span></a></li>
+				<li><a href="/plugins">Plugins</a></li>
+				<li><a href="/documentation">Documentation</a></li>
+				<li><a href="/support">Support</a></li>	
 			</ul>		
 		</div>		
 		
-		<p id="rss-feed"><a href="index.html" class="feed">Grab the RSS FEEd</a></p>	
+		<p id="rss-feed"><a href="index.html" class="feed">rss</a></p>	
 		
 		<form id="quick-search" action="index.html" method="get" >
 			<p>
@@ -27,6 +26,7 @@
 			<input class="btn" alt="Search" type="image" name="searchsubmit" title="Search" src="images/search.png" />
 			</p>
 		</form>	
-						
+		<a class="button-link" href="/download"><span class="downloadicon">Download now</span></a>
+		<a class="button-link button-link2" href="/install">EASY INSTALL GUIDE</a>
 	<!-- /header -->					
 	</div>
