--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
-%html(lang="en")
+%html(lang="en" class="no-js")
 	%head
 		%meta(charset="utf-8")
+		%meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
 		- if @description
 			%meta(name="description" content=@description)
 		- if @keywords
 			%meta(name="keywords" content=@keywords)
 		%title
 			ASP.NET Image Resizing Module for IIS
+			
+		%meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		
+		:plain
+			<link rel="shortcut icon" href="/favicon.ico">
+			<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+			<link rel="stylesheet" href="/css/1-reset.css?v=2">
+			<link rel="stylesheet" href="/css/2-site.css?v=2">
+			<link rel="stylesheet" href="/css/3-banners.css?v=2">
+			<link rel="stylesheet" href="/css/main.css?v=2">
+			<!--[if lt IE 9]>
+			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+			<![endif]-->
 	
-		%link(href="/css/master.css" media="screen" rel="stylesheet")
-		%link(href="/css/banners.css" media="screen" rel="stylesheet")
-
-		/[if lte IE 6]
-		%link(rel="stylesheet" href="/css/ie6.css" media="screen, projection")
-
 		= local_stylesheet_link_tag('local')
 
 		%link(href="/articles.xml" rel="alternate" type="application/atom+xml")
-		= haml :analytics, :layout => false
 	%body
-		%div#wrap
-			= haml :header, :layout => false
-			= yield
-		= haml :footer, :layout => false
-		%script{:type => "text/javascript",
-				:src  => "/js/jquery-1.5.2.min.js"}
-		
+		%div.site-container
+			= erubis :header, :layout => false
+			%div.main
+				= yield
+			= erubis :footer, :layout => false
+		:plain
+			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+			<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.5.2.min.js"%3E%3C/script%3E'))</script>
+			<script src="js/plugins.js"></script>
+			<script src="js/jquery.jshowoff.js"></script>
+			<script src="js/script.js"></script>
+		= haml :analytics, :layout => false
 
