--- a/public/css/1-reset.css
+++ b/public/css/1-reset.css
@@ -6,7 +6,7 @@ del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,header,footer,nav {
+table, caption, tbody, tfoot, thead, tr, th, td{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -44,4 +44,155 @@ q:before, q:after {
 }
 blockquote, q {
 	quotes: "" "";
+}
+
+/** NDJ additions to reset **/
+
+article,aside,canvas,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section,summary,
+time,mark,audio,video{
+	margin:0;
+	padding:0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
+
+article,aside,details,figcaption,figure,footer,
+header,hgroup,menu,nav,section{
+	display: block;
+}
+
+address,caption,cite,dfn,th,var{
+	font-style:normal;
+	font-weight:normal;
+}
+caption,th{
+	text-align:left;
+}
+h1,h2,h3,h4,h5,h6{
+	font-size:100%;
+	font-weight:normal;
+}
+
+abbr,acronym{
+	border:0;
+}
+
+/* Selectively enabled text styling */
+
+.t {
+	font-size:100%;  /*16px*/
+	line-height:1.5em; /* 24px rhythm */
+	font-family:'Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif;
+	color: #111;
+}
+
+html>body .t{
+	font-size:16px;
+	line-height:1.5em;
+}
+
+/* Headings
+-------------------------------------------------------------- */
+
+.t h1, .t h2, .t h3, .t h4, .t h5, .t h6{
+	font-weight:normal;
+	font-family:'Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif;
+	font-size:100%;
+	line-height:1.5em;
+	margin-bottom:1.5em;
+	margin-top:1.5em;
+}
+.t h1{
+	font-size:200%;
+	line-height:.75em;
+	margin-bottom:.75em;
+	margin-top:.75em;
+}
+.t h2{
+	font-size:150%;
+	margin-bottom:1em;
+	margin-top:1em;
+	line-height:1em;
+}
+.t h3{
+	font-weight:bold;
+}
+
+
+
+/* Text elements
+-------------------------------------------------------------- */
+
+.t p{ 
+	margin-top:1.5em;
+	margin-bottom:1.5em;
+} 
+
+.t ul li{
+	list-style-type: square;
+	margin:0;
+	padding:0;
+}
+.t ul{
+	margin-top:1.5em;
+}
+
+.t a,
+.t a:focus,
+.t a:hover {
+	text-decoration: underline;
+}
+
+.t blockquote {
+	background: #F9F9F9;
+	border-left: 6px solid #ccc;
+	margin: 0 0 18px;
+	padding: 9px;
+	quotes: """ """ "'" "'";
+	color: #333;
+	font-family: Georgia, "Times new roman", serif;
+	font-size: 13px;
+	font-style: italic;
+}
+
+.t p.intro:first-letter,
+.t p.important:first-letter {
+	font-size: 43px;
+	font-weight: normal;
+	line-height: 32px;
+	letter-spacing: 5px;
+	float: left;
+	padding: 5px 0 0 0;
+	width: auto;
+	font-family: Georgia, Times, serif;
+}
+
+.t p.intro:first-line,
+.t p.important:first-line {
+	font-variant: small-caps;
+}
+
+.t pre, .t code {
+	overflow-x: auto;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	background: #111;
+	border: 1px solid #333;
+	font-family: monaco, courier, "courier new", monospace;
+	font-size: 11px;
+	margin: 0 0 18px;
+	padding: 9px;
+}
+
+.t .amp {
+	font-family: Baskerville, "Goudy Old Style", "Palatino", "Book Antiqua", serif;
+	font-style: italic;
+	font-weight: normal;
+	line-height: inherit;
 }
