Improved CSS greatly

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,4 +7,7 @@
 	color:#202020;
 	font-family:'Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif;
 	padding:20px;
+	padding-top:0px;
+	padding-bottom:0px;
+	text-shadow: -940px 0 16px white;
 }
