--- a/views/home.haml
+++ b/views/home.haml
@@ -2,7 +2,7 @@
 	%div.banners
 		= erubis :banners_content, :layout => false
 :plain
-	<div class="page-content">
+	<div class="page-content t">
 		#{@page.to_html(self)}
 	</div>
 	
