--- a/public/css/2-site.css
+++ b/public/css/2-site.css
@@ -9,8 +9,8 @@ body{
 
 header{
 	font-family:'Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif;
-	padding-bottom:10px;
 	display:block;
+	margin-bottom:21px;
 }
 
 header h1{
@@ -18,19 +18,20 @@ header h1{
 	padding-top:6px;
 }
 header h1 a{
-  color: white;
+  color: #aaa;
   font-size: 32px;
-  letter-spacing: 2px;
-  line-height: 1em;
+  letter-spacing: 5.5px;
+  line-height: 48px;
   text-decoration: none;
-  text-shadow: 0 0 70px white;
-	text-transform: lowercase;
-	
-	
+  
+  text-transform: lowercase;
 }
 header h1 span.tech{
-	font-size:50%;
-	display:block;
+ display: block;
+ font-size: 16px;
+ letter-spacing: 0;
+ line-height: 24px;
+ text-shadow: 0 0 8px white;
 }
 header .menu-wrap{
 	float:right;
@@ -40,6 +41,8 @@ header .menu-wrap{
 header ul.menu{
 	float:left;
 	list-style-type:none;
+	width:557px;
+	color:#aaa;
 }
 
 header ul.menu li{
@@ -48,15 +51,15 @@ header ul.menu li{
 header ul.menu a{
 	text-decoration:none;
 	display:block;
-	font-weight:bold;
-	color:white;
 	padding: 10px 15px;
 	text-decoration: none;
+	color:#aaa;
 	text-transform: lowercase;
 	
 }
 header ul.menu a:hover{
-	text-shadow: 0 0 20px white;
+	text-shadow: 0 0 8px white;
+	color:white;
 }
 header ul.menu li.current a{
 	background:url(/images/nav-arrow.png) top center no-repeat;
@@ -69,7 +72,7 @@ footer{
 	font-family:'Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif;
 	display:block;
 	text-align:center;
-	color:#d0d0d0;
+	color:#aaa;
 	padding-top:10px;
 	margin-bottom:20px;
 }
