--- a/public/css/3-banners.css
+++ b/public/css/3-banners.css
@@ -3,8 +3,8 @@
 }
 .banners {
   position: relative;
-  width: 960px;
-  height: 400px;
+  width: 930px;
+  height: 340px;
 }
 
 /* So only the first banner is visible until the javascript loads */
@@ -13,8 +13,7 @@ div.banner{ display:none;}
 
 
 div.banner {
-  width: 960px;
-  height: 337px;
+  width: 930px;
   color: #dfdfdf;
 }
 
@@ -36,7 +35,10 @@ div.banner .image-block img, div.banner .text-left img {
   div.banner .text-block, div.banner .text-right {
     float: right;
     width: 512px;
-    display: inline; }
+    display: inline; 
+		text-shadow: 564px 0 32px white;
+		
+}
 
 
   div.banner a.more-link {
@@ -59,54 +61,42 @@ div.banner .image-block img, div.banner .text-left img {
 
 
 /*-- jShowOff module styles -- */
-.jshowoff.basicFeatures {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0; }
-  .jshowoff.basicFeatures img, .jshowoff.basicFeatures div {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0; }
-.jshowoff div p, .jshowoff div h2 {
-  _background-color: #efefef; }
 .jshowoff p.jshowoff-slidelinks {
   position: absolute;
-  bottom: 5px;
-  right: 5px;
+  top: 0px;
+  right: 0px;
   margin: 0;
   padding: 0; }
 
 .jshowoff-slidelinks a, .jshowoff-controls a {
+	background-color: transparent;
+	border: 1px solid #222222;
+  border-radius: 30px;
+	-moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+	color: #AAAAAA;
   display: block;
-  background-color: #130d0a;
-  color: white;
   padding: 5px 7px 5px;
   margin: 0px;
-  margin-left: 5px;
-  float: left;
   text-decoration: none;
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -webkit-border-bottom-left-radius: 4px;
   outline: none;
-  font-size: 11px;
-  line-height: 14px; }
+  font-size: 12px;
+  line-height: 12px; }
 
 .jshowoff-controls a {
   font-size: 12px;
   line-height: 15px;
   padding: 4px 8px 5px; }
 
-.jshowoff-slidelinks a:hover, .jshowoff-controls a:hover {
-  color: white; }
 
-.jshowoff-slidelinks a.jshowoff-active {
-  background-color: white;
-  color: #130d0a; }
-  .jshowoff-slidelinks a.jshowoff-active:hover {
-    background-color: white;
-    color: #130d0a; }
+.jshowoff-slidelinks a:hover, .jshowoff-controls a:hover ,.jshowoff-slidelinks a.jshowoff-active, .jshowoff-slidelinks a.jshowoff-active:hover {
+    background-color: #222;
+    color: #aaa; 
+text-decoration:none;
+}
 
 p.jshowoff-controls {
+	display:none;
   overflow: auto;
   height: 1%;
   padding: 0 0 5px 5px;
