--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,6 +19,7 @@
 			<link rel="stylesheet" href="/css/2-site.css?v=2">
 			<link rel="stylesheet" href="/css/3-banners.css?v=2">
 			<link rel="stylesheet" href="/css/main.css?v=2">
+			<link rel="stylesheet" href="/js/highlight/styles/vs.css">
 			<!--[if lt IE 9]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<![endif]-->
@@ -37,6 +38,7 @@
 			<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.5.2.min.js"%3E%3C/script%3E'))</script>
 			<script src="js/plugins.js"></script>
 			<script src="js/jquery.jshowoff.js"></script>
+			<script src="js/highlight/highlight.pack.js"></script>
 			<script src="js/script.js"></script>
 		= haml :analytics, :layout => false
 
