Fixed title bug (forgot file)

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
 		- if @keywords
 			%meta(name="keywords" content=@keywords)
 		%title
-			ASP.NET Image Resizing Module for IIS
+			= @title
 			
 		%meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		
