--- a/views/layout.haml
+++ b/views/layout.haml
@@ -37,9 +37,9 @@
 		:plain
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 			<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.5.2.min.js"%3E%3C/script%3E'))</script>
-			<script src="js/plugins.js"></script>
-			<script src="js/jquery.jshowoff.js"></script>
-			<script src="js/highlight/highlight.pack.js"></script>
-			<script src="js/script.js"></script>
+			<script src="/js/plugins.js"></script>
+			<script src="/js/jquery.jshowoff.js"></script>
+			<script src="/js/highlight/highlight.pack.js"></script>
+			<script src="/js/script.js"></script>
 		
 
