--- a/views/analytics.haml
+++ b/views/analytics.haml
@@ -1,7 +1,7 @@
 - if @google_analytics_code
 :plain
-	<script>
-		var _gaq=[['_setAccount','#{@google_analytics_code}'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
+	<script type="text/javascript">
+		var _gaq=[['_setAccount','#{@google_analytics_code}'],['_trackPageview'], ['_setDomainName', 'none'],['_setAllowLinker', true]]; // Change UA-XXXXX-X to be your site's ID
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
 		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
 		s.parentNode.insertBefore(g,s)}(document,'script'));
