Added coloring change for inline code elements (` ` )

--- a/public/css/1-reset.css
+++ b/public/css/1-reset.css
@@ -212,6 +212,13 @@ html>body .t{
 	line-height:16px;
 }
 
+.no-banner code{
+	color: #0066a1;
+}
+.no-banner pre code{
+	color: inherit;
+}
+
 
 .t strong{font-weight:bold;}
 
