--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,6 +46,9 @@
 	border-bottom: 1px solid rgba(0,0,0,0.25);
 	position: relative;
 	cursor: pointer;
+	
+	margin-right: 20px;
+  text-decoration: none !important;
 }
  
 	.awesome:hover							{ background-color: #111; color: #fff; }
