Changed reset.css trying to fix background color white flash issue.

--- a/public/css/1-reset.css
+++ b/public/css/1-reset.css
@@ -24,7 +24,7 @@ table, caption, tbody, tfoot, thead, tr, th, td{
 body {
 	line-height: 1;
 	color: black;
-	background: white;
+	background: black;
 }
 ol, ul {
 	list-style: none;
