Switched to using cloud front for banner images and some unchanging scripts.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -37,8 +37,8 @@
 		:plain
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 			<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.5.2.min.js"%3E%3C/script%3E'))</script>
-			<script src="/js/jquery.jshowoff.js"></script>
-			<script src="/js/highlight/highlight.pack.js"></script>
+			<script src="http://cf.imageresizing.net/js/jquery.jshowoff.js"></script>
+			<script src="http://cf.imageresizing.net/js/highlight/highlight.pack.js"></script>
 			<script src="/js/script.js"></script>
 		- if @page and @page.metadata("uservoice")
 			:plain
