Fixed error message and removed sidebar reference.

--- a/views/error.haml
+++ b/views/error.haml
@@ -6,7 +6,6 @@
     %h1 Sorry, something went wrong
 
     %p
-      An error occurred whilst we were trying to serve your page. Please
-      bear with us, or try another page.
+      An error occurred while trying to serve your page. Please e-mail support@imageresizing.net if this issue persists for more than a few minutes.
 
-= haml :sidebar, :layout => false
+
