Fixed notfound markup error and fixed error page some more.

--- a/views/error.haml
+++ b/views/error.haml
@@ -1,11 +1,6 @@
-%nav.breadcrumb
-  %a(href="/") Home
-
-#content
-  %section(role="main")
-    %h1 Sorry, something went wrong
-
-    %p
-      An error occurred while trying to serve your page. Please e-mail support@imageresizing.net if this issue persists for more than a few minutes.
-
+:plain
+	<div class="page-content t no-banner">
+		<h1>Sorry, something went wrong</h1>
+		<p>An error occurred while trying to serve your page. Please e-mail <strong>support@imageresizing.net</strong> (or contact us using <a href="/support">the support page widget</a>) if this issue persists for more than a few minutes.</p>.
+	</div>
 
