--- a/views/layout.haml
+++ b/views/layout.haml
@@ -52,4 +52,15 @@
 		-if @page and @page.metadata("ejunkie")
 			:plain
 				<script src='http://www.e-junkie.com/ecom/box.js' type='text/javascript'></script>
+		-if @page and @page.metadata("search")
+			:plain
+				<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+				<script type="text/javascript"> 
+				  google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
+				  google.setOnLoadCallback(function() {
+				    var customSearchControl = new google.search.CustomSearchControl('005556834036073640702:j3bnlceufnc');
+				    customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+				    customSearchControl.draw('cse');
+				  }, true);
+				</script>
 
