--- a/views/layout.haml
+++ b/views/layout.haml
@@ -57,9 +57,25 @@
 				<script src="http://www.google.com/jsapi" type="text/javascript"></script>
 				<script type="text/javascript"> 
 				  google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
+				  var _gaq = _gaq || [];
+				  _gaq.push(["_setAccount", "UA-5218175-5\""]);
+				  function _trackQuery(control, searcher, query) {
+				    var gaQueryParamName = "q";
+				    var loc = document.location;
+				    var url = [
+				      loc.pathname,
+				      loc.search,
+				      loc.search ? '&' : '?',
+				      gaQueryParamName == '' ? 'q' : encodeURIComponent(gaQueryParamName),
+				      '=',
+				      encodeURIComponent(query)
+				    ].join('');
+				    _gaq.push(["_trackPageview", url]);
+				  }
 				  google.setOnLoadCallback(function() {
 				    var customSearchControl = new google.search.CustomSearchControl('005556834036073640702:j3bnlceufnc');
 				    customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+				    customSearchControl.setSearchStartingCallback(null, _trackQuery);
 				    customSearchControl.draw('cse');
 				  }, true);
 				</script>
