--- a/views/layout.haml
+++ b/views/layout.haml
@@ -79,4 +79,9 @@
 				    customSearchControl.draw('cse');
 				  }, true);
 				</script>
+		-if @page and @page.metadata("plusone")
+			:plain
+				<!-- Place this tag in your head or just before your close body tag -->
+				<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
 
