Added floated-right +1 as well

--- a/views/home.haml
+++ b/views/home.haml
@@ -3,6 +3,7 @@
 		= erubis :banners_content, :layout => false
 :plain
 	<div class="page-content t">
+		<div style="width:70px;padding-top:25px;float:right"><g:plusone></g:plusone></div>
 		#{@page.to_html(self)}
 		<g:plusone></g:plusone>
 	</div>
