--- a/views/home.haml
+++ b/views/home.haml
@@ -1,6 +1,6 @@
 %div(class="banners-wrap t")
 	%div.banners
-		= erubis :banners_content, :layout => false
+		= erubis :banners_content, :layout => false, :views => Nesta::Path.local("content/pages")
 :plain
 	<div class="page-content t">
 		<div style="width:70px;padding-top:25px;float:right"><g:plusone></g:plusone></div>
