--- a/views/layout.haml
+++ b/views/layout.haml
@@ -22,10 +22,10 @@
 			<!--[if lt IE 9]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<![endif]-->
-			- if @page and @page.metadata("jqueryui")
+			- if @page and @page.lib("jqueryui")
 				:plain
-					<link rel="stylesheet" href="/css/smoothness/jquery-ui-1.8.6.custom.css"/>
-			- if @page and @page.metadata("jqueryui")
+					<link rel="stylesheet" href="/css/smoothness/jquery-ui-1.8.16.custom.css"/>
+			- if @page and @page.lib("jqueryui")
 				:plain
 					<link rel="stylesheet" href="/css/jquery.Jcrop.css" />
 		= local_stylesheet_link_tag('local')
@@ -43,15 +43,22 @@
 			<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.6.2.min.js"%3E%3C/script%3E'))</script>
 			<script src="/js/jquery.bxSlider.min.js"></script>
 			<script src="/js/highlight/highlight.pack.js"></script>
-		- if @page and @page.metadata("jqueryui")
+		- if @page and @page.lib("jqueryui")
 			:plain
 				<script src="/js/jquery-ui-1.8.16.custom.min.js"></script>
-		- if @page and @page.metadata("jcrop")
+		- if @page and @page.lib("jcrop")
 			:plain
 				<script src="/js/jquery.Jcrop.min.js"></script>
 			<script src="/js/script.js"></script>
+		- if @page and @page.lib("tinybox")
+			:plain
+				<script src="/js/tinybox.js"></script>
+		- if @page and @page.lib("demo")
+			:plain
+				<script src="/js/demo.js"></script>
 
-		- if @page and @page.metadata("uservoice")
+
+		- if @page and @page.lib("uservoice")
 			:plain
 				<script type="text/javascript">
 				  (function() {
@@ -60,10 +67,10 @@
 				    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
 				  })();
 				</script>
-		-if @page and @page.metadata("ejunkie")
+		-if @page and @page.lib("ejunkie")
 			:plain
 				<script src='http://www.e-junkie.com/ecom/box.js' type='text/javascript'></script>
-		-if @page and @page.metadata("search")
+		-if @page and @page.lib("search")
 			:plain
 				<script src="http://www.google.com/jsapi" type="text/javascript"></script>
 				<script type="text/javascript"> 
@@ -90,7 +97,7 @@
 				    customSearchControl.draw('cse');
 				  }, true);
 				</script>
-		-if @page and @page.metadata("plusone")
+		-if @page and @page.lib("plusone")
 			:plain
 				<!-- Place this tag in your head or just before your close body tag -->
 				<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
