Added TinyBox support

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,13 @@
+.tbox {position:absolute; display:none; padding:14px 17px; z-index:900}
+.tinner {padding:15px; -moz-border-radius:5px; border-radius:5px; background:#fff url(/images/preload.gif) no-repeat 50% 50%; border-right:1px solid #333; border-bottom:1px solid #333}
+.tmask {position:absolute; display:none; top:0px; left:0px; height:100%; width:100%; background:#000; z-index:800}
+.tclose {position:absolute; top:0px; right:0px; width:30px; height:30px; cursor:pointer; background:url(/images/close.png) no-repeat}
+.tclose:hover {background-position:0 -30px}
+.tcontent{height:100%}
+
+
+
+
 .page-content{
   background-color: #FEFEFE;
   border: 7px solid #E0E0E0;
