Fixed plugins page, buy links working again. Added transparency note on default encoder. Fixed autorotate description, fixed freedom plugin formatting.

--- a/views/buy_page.haml
+++ b/views/buy_page.haml
@@ -1,5 +1,5 @@
 %div(class="page-content t no-banner")
-	-if @page and @page.metadata("ejunkiecart")
+	-if @page and @page.lib("ejunkiecart")
 		:plain
 			<div class="buySidebar">
 				<form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=929356&amp;cl=41912&amp;ejc=2" target="ej_ejc" method="POST" accept-charset="UTF-8">
