--- a/views/layout.haml
+++ b/views/layout.haml
@@ -22,12 +22,12 @@
 			<!--[if lt IE 9]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<![endif]-->
-			- if @page and @page.lib("jqueryui")
-				:plain
-					<link rel="stylesheet" href="/css/smoothness/jquery-ui-1.8.16.custom.css"/>
-			- if @page and @page.lib("jqueryui")
-				:plain
-					<link rel="stylesheet" href="/css/jquery.Jcrop.css" />
+		- if @page and @page.lib("jqueryui")
+			:plain
+				<link rel="stylesheet" href="/css/smoothness/jquery-ui-1.8.16.custom.css"/>
+		- if @page and @page.lib("jqueryui")
+			:plain
+				<link rel="stylesheet" href="/css/jquery.Jcrop.css" />
 		= local_stylesheet_link_tag('local')
 
 		%link(href="/articles.xml" rel="alternate" type="application/atom+xml")
@@ -41,7 +41,7 @@
 		:plain
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 			<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.6.2.min.js"%3E%3C/script%3E'))</script>
-
+			<script src="/js/jquery.tools.min.js"></script>
 			<script src="/js/highlight/highlight.pack.js"></script>
 		- if @page and @page.lib("bxSlider")
 			:plain
