Added plugin page sidebar and individual bundle pages

--- a/public/css/1-reset.css
+++ b/public/css/1-reset.css
@@ -219,7 +219,10 @@ html>body .t{
 .no-banner pre code{
 	color: inherit;
 }
-
+.t code, .no-banner code{
+	font-size:inherit;
+	line-height:inherit;
+}
 
 .t strong{font-weight:bold;}
 
