--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,7 +31,7 @@
   width: 160px;
 }
 
-.buySidebar h3{
+.buySidebar h3, .plugins_sidebar h3{
   color: #666666;
   font-size: inherit;
   font-weight: normal;
@@ -40,6 +40,40 @@
 }
 .buySidebar p{
 	line-height:1em;
+}
+
+.plugins_sidebar{
+  float: right;
+  margin-top: 75px;
+  padding: 10px;
+  text-align: left;
+  width: 200px;
+	border-left: 1px dotted gray;
+	margin-left:10px;
+	font-size:8pt;
+	padding-top:0;
+}
+.plugins_sidebar p{
+	line-height:1.6em;
+}
+.plugins_sidebar :first-child{
+	margin-top:0;
+}
+.plugins_sidebar h3{
+	font-size:10pt;
+	font-weight:bold;
+}
+.plugins_sidebar ul{
+	margin:0;
+	line-height:1.2em;
+	list-style-type:none;
+}
+.plugins_sidebar li{
+	background:none !important;
+}
+
+.plugins_sidebar a{
+	color:inherit;
 }
 
 .awesome, .awesome:visited {
