Added extras bundle with ejunkie

--- a/views/buy_page.haml
+++ b/views/buy_page.haml
@@ -8,6 +8,7 @@
 				<option value="Performance Bundle">Performance Bundle</option>
 				<option value="Designer Bundle">Designer Bundle</option>
 				<option value="Cloud Bundle">Cloud Bundle</option>
+				<option value="Extras Bundle">Extras Bundle</option>
 				</select>
 				<h3>Single developer or multi-developer business?</h3>
 				<select name="o2">
