--- a/views/home.haml
+++ b/views/home.haml
@@ -5,6 +5,6 @@
 	<div class="page-content t">
 		<div style="width:70px;padding-top:25px;float:right"><g:plusone></g:plusone></div>
 		#{@page.to_html(self)}
-		<g:plusone></g:plusone>
+		<div class="g-plusone"></div>
 	</div>
 	
