Fixed search page, restored uservoice on support page, and added disqus comments to the site, with per-page disabling with the '-comments' library.

--- a/views/page.haml
+++ b/views/page.haml
@@ -1,4 +1,3 @@
-:plain
-	<div class="page-content t no-banner">
-		#{@page.to_html(self)}
-	</div>
+%div(class="page-content t no-banner")
+	#{@page.to_html(self)}
+	= haml :comments, :layout => false
