--- a/views/comments.haml
+++ b/views/comments.haml
@@ -1,8 +1,18 @@
-- if short_name = Nesta::Config.disqus_short_name
-  #disqus_thread
-    - if Sinatra::Application.environment == :development
-      %script(type="text/javascript")
-        var disqus_developer = true;
-    %script(type="text/javascript" src="http://disqus.com/forums/#{short_name}/embed.js")
-    %noscript
-      %a(href="http://disqus.com/forums/#{short_name}/?url=ref") View comments.
+- if short_name = Nesta::Config.disqus_short_name and @page and not (@page.lib('-comments'))
+	#disqus_thread
+	- if Sinatra::Application.environment == :development
+		%script(type="text/javascript")
+			var disqus_developer = true;
+	:plain
+		<script type="text/javascript">
+				var disqus_shortname = '#{short_name}'; 
+				(function() {
+						var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+						dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+						(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+				})();
+		</script>
+	%noscript
+		Enable Javascript or 
+		%a(href="http://disqus.com/?ref_noscript")
+			click here to view the comments.
