Added comments support on plugin pages. Added plusone support across site

--- a/views/home.haml
+++ b/views/home.haml
@@ -1,10 +1,4 @@
 %div(class="banners-wrap t")
 	%div.banners
 		= erubis :banners_content, :layout => false, :views => Nesta::Path.local("content/pages")
-:plain
-	<div class="page-content t">
-		<div style="width:70px;padding-top:25px;float:right"><div class="g-plusone"></div></div>
-		#{@page.to_html(self)}
-		<div class="g-plusone"></div>
-	</div>
-	
+= haml :page, :layout => false
