--- a/views/page.haml
+++ b/views/page.haml
@@ -1,3 +1,7 @@
 %div(class="page-content t no-banner")
-	#{@page.to_html(self)}
+	-if @page and @page.lib("plusone")
+		<div style="width:70px;padding-top:25px;float:right"><div class="g-plusone"></div></div>
+	~ @page.to_html(self)
+	-if @page and @page.lib("plusone")
+		<div class="g-plusone"></div>
 	= haml :comments, :layout => false
