--- a/views/plugin_page.haml
+++ b/views/plugin_page.haml
@@ -23,5 +23,10 @@
 				custom plugin development at 80% off my regular rates.
 			
 		
-	~@page.to_html(self)
+	-if @page and @page.lib("plusone")
+		<div style="width:70px;padding-top:25px;float:right"><div class="g-plusone"></div></div>
+	~ @page.to_html(self)
+	-if @page and @page.lib("plusone")
+		<div class="g-plusone"></div>
 	%div(style="clear:both;")
+	= haml :comments, :layout => false
