--- a/views/plugin_page.haml
+++ b/views/plugin_page.haml
@@ -1,32 +1,33 @@
-%div(class="page-content t no-banner")
-	%div(class="plugins_sidebar")
-		-if @page and @page.metadata('Bundle') and not @page.flagged_as?('bundle')
+%div(class="page-content no-banner")
+	%div(class="t")
+		%div(class="plugins_sidebar")
+			-if @page and @page.metadata('Bundle') and not @page.flagged_as?('bundle')
+				%p
+					This plugin (#{@page.heading}) is part of the 
+					%a{href:@page.bundle.abspath}
+						= @page.bundle.heading
+			:markdown
+				### Where is the plugins section?
+				The `<plugins>` section is located in Web.config, and is nested inside the `<resizer>` element, which is nested inside `<configuration>`. For examples, see [this sample Web.config file](/docs/configuration).
+				### What is NuGet? 
+				NuGet is a better way to manage your project's libraries, and is [fully supported by the ImageResizer](/docs/nuget).  
+			-bundles.each do |bundle|
+				%h3
+					%a(href="#{bundle.abspath}")= bundle.heading
+				%ul
+					-bundle.bundle_plugins.each do |plugin|
+						%li
+							%a(href="#{plugin.abspath}")= plugin.heading
 			%p
-				This plugin (#{@page.heading}) is part of the 
-				%a{href:@page.bundle.abspath}
-					= @page.bundle.heading
-		:markdown
-			### Where is the plugins section?
-			The `<plugins>` section is located in Web.config, and is nested inside the `<resizer>` element, which is nested inside `<configuration>`. For examples, see [this sample Web.config file](/docs/configuration).
-			### What is NuGet? 
-			NuGet is a better way to manage your project's libraries, and is [fully supported by the ImageResizer](/docs/nuget).  
-		-bundles.each do |bundle|
-			%h3
-				%a(href="#{bundle.abspath}")= bundle.heading
-			%ul
-				-bundle.bundle_plugins.each do |plugin|
-					%li
-						%a(href="#{plugin.abspath}")= plugin.heading
-		%p
-			Don't see the feature or plugin you're looking for? I do 
-			%a(href='/plugins/custom')
-				custom plugin development at 80% off my regular rates.
+				Don't see the feature or plugin you're looking for? I do 
+				%a(href='/plugins/custom')
+					custom plugin development at 80% off my regular rates.
 			
 		
-	-if @page and @page.lib("plusone")
-		<div style="width:70px;padding-top:25px;float:right"><div class="g-plusone"></div></div>
-	~ @page.to_html(self)
-	-if @page and @page.lib("plusone")
-		<div class="g-plusone"></div>
-	%div(style="clear:both;")
+		-if @page and @page.lib("plusone")
+			<div style="width:70px;padding-top:25px;float:right"><div class="g-plusone"></div></div>
+		~ @page.to_html(self)
+		-if @page and @page.lib("plusone")
+			<div class="g-plusone"></div>
+		%div(style="clear:both;")
 	= haml :comments, :layout => false
