--- a/views/layout.haml
+++ b/views/layout.haml
@@ -46,6 +46,9 @@
 		- if @page and @page.lib("bxSlider")
 			:plain
 				<script src="/js/jquery.bxSlider.min.js"></script>
+		- if @page and @page.lib("jtools")
+			:plain
+				<script src="http://cdn.jquerytools.org/1.2.6/tiny/jquery.tools.min.js"></script>
 		- if @page and @page.lib("jqueryui")
 			:plain
 				<script src="/js/jquery-ui-1.8.16.custom.min.js"></script>
@@ -78,7 +81,7 @@
 				<script type="text/javascript"> 
 				  google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
 				  var _gaq = _gaq || [];
-				  _gaq.push(["_setAccount", "UA-5218175-5\""]);
+				  _gaq.push(["_setAccount", "#{@google_analytics_code}\""]);
 				  function _trackQuery(control, searcher, query) {
 				    var gaQueryParamName = "q";
 				    var loc = document.location;
@@ -93,7 +96,7 @@
 				    _gaq.push(["_trackPageview", url]);
 				  }
 				  google.setOnLoadCallback(function() {
-				    var customSearchControl = new google.search.CustomSearchControl('005556834036073640702:j3bnlceufnc');
+				    var customSearchControl = new google.search.CustomSearchControl('005556834036073640702:ds3gmqyjham');
 				    customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
 				    customSearchControl.setSearchStartingCallback(null, _trackQuery);
 				    customSearchControl.draw('cse');
