--- a/views/layout.haml
+++ b/views/layout.haml
@@ -108,5 +108,14 @@
 				<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 		:plain
 			<script src="/js/script.js"></script>
-
+		:plain
+			window._idl = {};
+			_idl.variant = "banner";
+			(function() {
+			    var idl = document.createElement('script');
+			    idl.type = 'text/javascript';
+			    idl.async = true;
+			    idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+			    document.getElementsByTagName('body')[0].appendChild(idl);
+			})();
 
