--- a/content/_layout/buy_page.haml
+++ b/content/_layout/buy_page.haml
@@ -1,3 +1,6 @@
+Layout: layout
+
+
 %div(class="page-content t no-banner")
 	-if @page and @page.lib("ejunkiecart")
 		:plain
@@ -26,4 +29,4 @@
 				</div>
 			</div>
 	
-	~@page.to_html(self)
+	= yield
