--- a/content/_layout/page.haml
+++ b/content/_layout/page.haml
@@ -1,7 +1,9 @@
--if @page and @page.metadata('banner')
+Layout: layout
+
+-if page.meta.banner
   %div(class="banners-wrap t")
     %div.banners
-      = auto @page.metadata('banner').to_sym, :layout => false, :views => Nesta::Path.local("content/pages" + (@page.metadata('banner path') || ""))
+      = partial page.meta.banner
 
 %div(class="page-content no-banner")
   -if @page and @page.metadata("textclass")
@@ -14,9 +16,10 @@
 
   -if @page and @page.lib("plusone")
     <div style="width:70px;padding-top:25px;float:right"><div class="g-plusone"></div></div>
-  ~ @page.to_html(self)
+  = yield
+
   -if @page and @page.lib("plusone")
     <div class="g-plusone"></div>
   :plain
     </div>
-  = haml :comments, :layout => false
+  = partial :comments
